Completed clients router.
