# src/api/index.ts
@@ -1,10 +1,10 @@
 import express, { Request, Response } from "express";
-
 import MessageResponse from "../interfaces/MessageResponse";
 import projectRouter from "./projects/projectsRoutes";
 import sectionRouter from "./sections/sectionsRoutes";
 import taskRouter from "./tasks/tasksRoutes";
 import workspaceRouter from "./workspaces/workspacesRouter";
+import clientRouter from "./clients/clientsRouter";
 
 const router = express.Router();
 
@@ -19,5 +19,6 @@ router.use("/projects", projectRouter);
 router.use("/sections", sectionRouter);
 router.use("/tasks", taskRouter);
 router.use("/workspaces", workspaceRouter);
+router.use("/clients", clientRouter);
 
 export default router;
